--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@firebase/auth": "^0.20.4",
     "crypto-js": "^4.1.1",
     "firebase": "^9.8.4",
+    "ngx-toastr": "^14.3.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
