--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "@firebase/auth": "^0.20.4",
     "chart.js": "^3.8.0",
     "firebase": "^9.8.4",
+    "html-to-pdfmake": "^2.4.4",
+    "jspdf": "^2.5.1",
     "ngx-toastr": "^14.3.0",
     "ngx-typed-js": "^2.1.1",
+    "pdfmake": "^0.2.5",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "xlsx": "^0.18.5",
@@ -34,7 +37,9 @@
     "@angular/cli": "^13.3.8",
     "@angular/compiler-cli": "~13.3.0",
     "@types/jasmine": "~3.10.0",
+    "@types/jspdf": "^2.0.0",
     "@types/node": "^12.11.1",
+    "@types/pdfmake": "^0.1.21",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
